[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mrrpplotlib"
version = "0.0.1"
authors = [{name="Mrrp", email="TheMrrp123@gmail.com"}]
description = "A small set of custom plotting functions that I use a lot"
readme = "README.md"
dependencies = ["numpy>=1.21.0", "matplotlib>=3.6"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build]
exclude = ["/.*", "/tests"]